--- a/reg.css
+++ b/reg.css
@@ -246,3 +246,15 @@ h1 {
 		top: 92%;
 	}
 }
+
+@media (max-width: 414px) and (max-height: 736px) {
+	.button {
+		top: 86%;
+	}
+}
+
+@media (max-width: 375px) and (max-height: 667px) {
+	.button {
+		top: 89.5%;
+	}
+}
